CV créé (en blue)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,94 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container mt-4">
+
+<div class="card ml-5 mt-4 p-3 mb-2 bg-primary text-dark" style="width: 76rem;">
+  <div class="card-body">
+    <div class="container mt-2 ml-2">
+      <section class="row">
+
+       <article class="col-2">
+           <img src="./marion-img.png" alt="Marion Lefèvre" class="img-thumbnail">
+        </article>
+
+        <article class="col-4">
+        <h1 class="card-title">Marion Lefèvre</h1> 
+            <p class="card-text">I am a journalism student based in Paris, France. </p>
+         </article>
+       </section>
+        <br>
+  <a href="#" class="btn btn-primary ml-2 p-3 mb-2 bg-dark text-white border border-dark">Contact me</a>
+  <a href="#" class="btn btn-primary ml-2 p-3 mb-2 bg-dark text-white border border-dark">Twitter</a>
+  <a href="#" class="btn btn-primary ml-2 p-3 mb-2 bg-dark text-white border border-dark">Facebook</a>
+      </div>
+  </div>
+</div>
+
+  <section class="row">
+    <article class="col-6">
+
+<div class="card bg-light mb-3 ml-5" style="max-width: 50rem;">
+  <div class="card-header"><h3 class="mb-1">Experiences</h3></div>
+  <div class="card-body">
+    <h5 class="card-title">Researcher for Al Jazeera English</h5>
+          <span class="badge badge-pill badge-dark mb-2">September 2018 - Today</span>
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+</p>
+
+
+
+<h5 class="card-title">Local Reporter for L'Orient-Le Jour</h5>
+          <span class="badge badge-pill badge-dark mb-2">June 2018 - July 2018</span>
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+</p>
+
+  </div>
+</div>
+
+    </article>
+    <article class="col-6 ml-7">
+      
+
+
+<div class="card bg-light mb-3 mr-5" style="max-width: 39rem;">
+  <div class="card-body">
+    <h5 class="card-title">Coordonnées</h5>
+    <p class="card-text">
+      
+<ul class="list-group list-group">
+<li class="ml-5 mt-2 mb-1">+33 06 78 40 34 19</li>
+<li class="ml-5 mt-2 mb-1">marion.lefevre@sciencespo.fr</li>
+<li class="ml-5 mt-2 mb-1">Site web</li>
+<li class="ml-5 mt-2 mb-1">Linkedin</li>
+
+   <h5 class="card-title mt-4">Langues parlées</h5>
+  
+<li class="ml-5 mt-2 mb-1">Français</li>
+<li class="ml-5 mt-2 mb-1">Anglais</li>
+<li class="ml-5 mt-2 mb-1">Espagnol</li>
+<li class="ml-5 mt-2 mb-1">Arabe</li>
+</ul>
+   <h5 class="card-title mt-4">Technologies</h5>
+<span class="badge badge-pill badge-primary">Excel</span>
+<span class="badge badge-pill badge-primary">Utilisation trop importante de mon téléphone</span>
+<span class="badge badge-pill badge-primary">Origami</span>
+<span class="badge badge-pill badge-primary">Edition de balises CSS sur tumblr</span>
+<span class="badge badge-pill badge-primary">Skyblog</span>
+
+
+
+  
+
+
+    </p>
+  </div>
+</div>
+
+    </article>
+  </section>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
